- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.12
- 
    None
- 
        
- 
        77389ad8ff9fd3dc56f5a398fab11a993e7a621c (qt/qtbase/5.12)
As noted in https://codereview.qt-project.org/#/c/238958/, windowDidResize: does not neccecarily have a matching windowWillResize: (e.g. during zoom it doesn't). The result is that we enable screen updates without a matching disable first, resulting in log messages "SLSReenableUpdate: unbalanced enable/disable update".
The screen update disable was added as a workaround for http://openradar.appspot.com/radar?id=4990815088672768, but since we've disabled threaded GL rendering support on macOS, the workaround isn't needed right now. We should:
- Disable it if threaded rendering is disabled.
- make sure to always pair up the enable/disable.
| For Gerrit Dashboard: QTBUG-73726 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 252659,3 | macOS: Remove screen-update disable during resize | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |